--- a/tables/objectsBuilders.tex
+++ b/tables/objectsBuilders.tex
@@ -4,8 +4,8 @@
 \begin{tabular}{ c l c c}
 \hline
 Class & Budget &
-\multicolumn{2}{c}{\textsf{No. of Objs}} \\
-&& \tiny{\textbf{MGO}} & \tiny{\textbf{API}} \\
+\multicolumn{2}{c}{\textsf{Num. Objetos}} \\
+&& \tiny{\textbf{RSer-MGO}} & \tiny{\textbf{RSer-API}} \\
 \hline
 \multirow{3}{*}{\textbf{NCL}} 
 &	60	&	6648	&	470	\\
@@ -75,6 +75,6 @@ Class & Budget &
 \end{tabular}%
 
 \caption{Evaluación del uso de MGOs frente a toda la API en la generación de
-objetos.}
+objetos usando Randoop.}
 \label{tab:results-obj}
 \end{table}
